[package]
name = "cotowali_chars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"

[dev-dependencies]
cotowali_asserts = { path = "../cotowali_asserts" }
rstest = "0.13.0"
